--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="#" onclick="contacts()" class="nav-link">Contact</a>
           </li>
           <li class="nav-item nav-left">
-            <button id="mode-switcher" class="nav-link darkmode">
+            <button aria-label="lightswitch" id="mode-switcher" class="nav-link darkmode">
               <div>
                 <svg
                   id="lightbulb"
@@ -190,7 +190,7 @@
       <div class="section-c">
         <div class="section-c-header">
           <h1>Hi, I'm Rahul</h1>
-          <h3>Front-end Developer X Designer.</h3>
+          <h2>Front-end Developer X Designer.</h2>
         </div>
       </div>
     </section>
@@ -204,11 +204,11 @@
     <section id="about" class="section">
       <div class="section-c">
         <div class="section-c-header">
-          <h3>
+          <h2>
             I'm Rahul Gajbhiye,
             <br />
             a Front-end Developer & UI/UX Designer, a freelancer.
-          </h3>
+          </h2>
           <p>
             <br />
             Working towards the better world & the world of web2.0 and web3.0,
@@ -223,7 +223,7 @@
       <div class="section-c">
         <div class="section-c-header">
           <div>
-            <h3>You can connect with me on these platform's.</h3>
+            <h2>You can connect with me on these platform's.</h2>
           </div>
           <div id="socialmedia" class="social-icon darkmode-text">
             <a href="https://www.instagram.com/rahulgajbhiye201/"
